feat: remove icon and add categories on tech stack
